// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallExpression component Action call should render 1`] = `
<WrappedCallExpression
  actions={{}}
  arguments={
    [
      "a",
      1,
    ]
  }
  callee={
    {
      "name": "Action",
      "type": "Identifier",
    }
  }
  depth={0}
  parent={
    Immutable.List [
      "body",
      0,
      "expression",
    ]
  }
  rule={
    Immutable.Map {
      "foo": "rule",
    }
  }
  schemas={
    Immutable.Map {
      "foo": "schemas",
    }
  }
/>
`;

exports[`CallExpression component test condition should not render delete widget because the expression is not the only line of the test condition and the expression is not hovered 1`] = `
<WrappedCallExpression
  actions={{}}
  arguments={
    [
      "a",
      1,
    ]
  }
  callee={
    {
      "name": "eq",
      "type": "Identifier",
    }
  }
  depth={0}
  parent={
    Immutable.List [
      "body",
      0,
      "test",
      "left",
    ]
  }
  rule={
    Immutable.Map {
      "foo": "rule",
    }
  }
  schemas={
    Immutable.Map {
      "foo": "schemas",
    }
  }
/>
`;

exports[`CallExpression component test condition should not render delete widget because the expression is the only line of the test condition 1`] = `
<WrappedCallExpression
  actions={{}}
  arguments={
    [
      "a",
      1,
    ]
  }
  callee={
    {
      "name": "eq",
      "type": "Identifier",
    }
  }
  depth={0}
  parent={
    Immutable.List [
      "body",
      0,
      "test",
    ]
  }
  rule={
    Immutable.Map {
      "foo": "rule",
    }
  }
  schemas={
    Immutable.Map {
      "foo": "schemas",
    }
  }
/>
`;

exports[`CallExpression component test condition should not render delete widget because the expression is the only line of the test condition 2`] = `
<WrappedCallExpression
  actions={{}}
  arguments={
    [
      "a",
      1,
    ]
  }
  callee={
    {
      "name": "eq",
      "type": "Identifier",
    }
  }
  depth={0}
  parent={
    Immutable.List [
      "body",
      0,
      "test",
    ]
  }
  rule={
    Immutable.Map {
      "foo": "rule",
    }
  }
  schemas={
    Immutable.Map {
      "foo": "schemas",
    }
  }
/>
`;

exports[`CallExpression component test condition should render delete widget because the expression is not the only line of the test condition and the expression is hovered 1`] = `
<WrappedCallExpression
  actions={{}}
  arguments={
    [
      "a",
      1,
    ]
  }
  callee={
    {
      "name": "eq",
      "type": "Identifier",
    }
  }
  depth={0}
  parent={
    Immutable.List [
      "body",
      0,
      "test",
      "left",
    ]
  }
  rule={
    Immutable.Map {
      "foo": "rule",
    }
  }
  schemas={
    Immutable.Map {
      "foo": "schemas",
    }
  }
/>
`;
